Fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ p, h1, h2, h3, h4, h5, h6 { overflow-wrap: break-word; }
 
 /* #region Utilities */
 
+html,
+body {
+    height: 100%;
+}
+
 body {
     font-family: "Dongle", sans-serif;
     font-weight: 400;
@@ -72,8 +77,8 @@ body {
 }
 
 .background {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
@@ -122,7 +127,7 @@ body {
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     position: fixed;
     left: 0;
     top: 0;
@@ -158,7 +163,7 @@ body {
 .content {
     width: var(--width-content);
     min-width: var(--min-width-content);
-    height: calc(100vh - var(--height-header));
+    height: calc(100% - var(--height-header));
     position: fixed;
     top: var(--height-header);
     right: 0;
